[tool.poetry]
name = "spectrum-reconstruction"
version = "0.1.0"
description = ""
authors = ["torupa <xapytotkd@gmail.com>"]
readme = "README.md"
packages = [{include = "spectrum_reconstruction"}]

[tool.poetry.dependencies]
python = ">3.9"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
